# hyver

./: .gitignore  README.md  pyproject.toml
src/hvt/: __init__.py  builtins.py  cache.py  cli.py  orchestrator.py  registry.py  types.py
src/hvt/calibration/: __init__.py  quant_regressor.py
src/hvt/eval/: __init__.py  adversarial.py  benchmark.py
src/hvt/integrations/: __init__.py  trl_adapter.py
src/hvt/model_verifiers/: __init__.py  litellm_adapter.py  mock.py
src/hvt/rules/: __init__.py  code.py  logic.py  math.py
src/hvt/synlogic/: __init__.py  exporter.py  tasks.py
tests/: test_cli.py  test_eval.py  test_hvt.py  test_synlogic.py  test_trl_adapter.py
